[project]
name = "personal-finance-tracker"
version = "0.1.0"
description = "A personal finance tracker"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["personal_finance_tracker"] 
